# AetherHook

./: AetherHook.sln  CMakeLists.txt  README.md
AetherHook/: AetherHook.cpp  AetherHook.vcxproj  AetherHook.vcxproj.filters
AetherHook/include/: context.h  engine.h  hook.h  rule.h  utils.h
AetherHook/src/: context.cpp  engine.cpp  hook.cpp  rule.cpp  utils.cpp
examples/OpenProcess/: CMakeLists.txt  main.cpp
include/: context.h  engine.h  hook.h  utils.h
shared/: lock.h  types.h
src/: context.cpp  engine.cpp  hook.cpp  rule.cpp  utils.cpp
